[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydistort"
description = "Asynchronous media distortion module"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["distort", "asyncio"]
authors = [
  { name = "barsikus007" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies  = [
    "pillow~=9.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/barsikus007/pydistort#readme"
Issues = "https://github.com/barsikus007/pydistort/issues"
Source = "https://github.com/barsikus007/pydistort"

[project.optional-dependencies]
apng = ["apng~=0.3.4"]
lottie = ["lottie[GIF]~=0.6.11"]
all = ["pydistort[apng,lottie]"]


[tool.hatch.version]
path = "pydistort/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=boobs --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
